grammar.js
    source_file: $ => optional(seq(sep1($._statement, ";"), optional(";"))),

    _statement: $ =>
      choice(
        $.begin_statement,
        $.savepoint_statement,
        $.commit_statement,
        $.rollback_statement,
        $.pg_command,

        $.select_statement,
        $.update_statement,
        $.insert_statement,
        $.delete_statement,
        $.set_statement,
        $.grant_statement,
        $.revoke_statement,
        $.alter_default_privileges_statement,
        $.drop_statement,
        $.create_statement,
        $.alter_statement,
        $.truncate_statement,
        $.create_type_statement,
        $.create_domain_statement,
        $.create_table_statement,
        $.create_index_statement,
        $.create_schema_statement,
        $.create_database_statement,
        $.create_role_statement,
        $.create_extension_statement,
        $.create_event_trigger_statement,
        $.create_aggregate_statement,
        $.create_policy_statement,
        $.drop_function_statement,
        $.drop_database_statement,

        // TODO: remove from _statement
        $.return_statement,
        $.declare_statement,

        $.comment_statement,
        $.create_view_statement,
        $.create_materialized_view_statement,
        $.alter_type_statement,
        $.alter_table_statement,
        $.combining_query,
        $.vacuum_statement,
        $.do_statement,
        $.values_clause,
        $.recovery_values_statement,

        $.create_trigger_statement,
        $.create_function_statement,
      ),

    with_clause: $ =>
      seq(kw("WITH"), optional(kw("RECURSIVE")), commaSep1($.cte)),

    cte: $ =>
      seq(
        $.identifier,
        optional(alias($.identifier_list, $.column_list)),
        kw("AS"),
        optional(seq(optional(kw("NOT")), kw("MATERIALIZED"))),
        "(",
        choice(
          $.select_statement,
          $.delete_statement,
          $.insert_statement,
          $.update_statement,
          $.combining_query,
          $.values_clause,
          $.select_subexpression,
        ),
        ")",
      ),

    select_statement: $ => seq(optional($.with_clause), $._select_statement),
    order: $ => choice(kw("ASC"), kw("DESC")),
    nulls_order: $ => seq(kw("NULLS"), choice(kw("FIRST"), kw("LAST"))),
    table_column: $ =>
      prec.right(
        seq(
          field("name", $._identifier),
          field("type", $._type),
          field("constraints", repeat($._column_constraint)),
        ),
      ),

    _column_constraint: $ => choice(
      $.default_clause,
      $.primary_key_constraint,
      $.check_constraint,
      $.references_constraint,
      $.unique_constraint,
      $.null_constraint,
      $.named_constraint,
      $.auto_increment_constraint,
      $.generated_constraint,
      $.order,
      $.comment_clause
    ),
    using_clause: $ => seq(kw("USING"), choice($.identifier, $.identifier_list)),


    // SELECT
    _select_statement: $ =>
      prec.right(
        seq(
          $.select_clause,
          optional($.from_clause),
          optional($.where_clause),
          optional($.group_by_clause),
          optional($.window_clause),
          optional($.order_by_clause),
          optional($.limit_clause),
          optional($.offset_clause),
        ),
      ),

    group_by_clause: $ =>
      seq(
        kw("GROUP BY"),
        commaSep1($.grouping_expression),
        optional($.having_clause),
      ),
    having_clause: $ => seq(kw("HAVING"), $._expression),
    grouping_expression: $ =>
      prec(
        1,
        choice(
          $._simple_expression,
          $.grouping_sets_clause,
          $.rollup_clause,
          $.cube_clause,
        ),
      ),
    grouping_sets_clause: $ =>
      seq(kw("GROUPING SETS"), "(", commaSep1($.grouping_set), ")"),
    rollup_clause: $ =>
      seq(
        kw("ROLLUP"),
        "(",
        commaSep1(choice($._simple_expression, $.grouping_set)),
        ")",
      ),
    cube_clause: $ =>
      seq(
        kw("CUBE"),
        "(",
        commaSep1(choice($._simple_expression, $.grouping_set)),
        ")",
      ),
    grouping_set: $ => prec(1, seq("(", commaSep($._simple_expression), ")")),
    expression_list: $ => seq("(", commaSep($._expression), ")"),
    order_expression: $ =>
      seq($._expression, optional($.order), optional($.nulls_order)),
    window_clause: $ =>
      seq(kw("WINDOW"), field("items", commaSep1($.window_item))),
    window_item: $ => seq($.identifier, kw("AS"), $.window_definition),
    order_by_clause: $ => seq(kw("ORDER BY"), commaSep1($.order_expression)),
    limit_clause: $ =>
      seq(
        kw("LIMIT"),
        choice($.number, kw("ALL")),
        optional(seq(",", $.number)), // MySQL LIMIT a, b
      ),
    offset_clause: $ =>
      prec.right(
        seq(kw("OFFSET"), $.number, optional(choice(kw("ROW"), kw("ROWS")))),
      ),
    where_clause: $ => seq(kw("WHERE"), field("condition", $._expression)),
    alias: $ =>
      prec.right(
        choice($.identifier, $.table_and_columns, $.column_definitions, $.string),
      ),
    aliased_expression: $ => seq(field("expression", $._expression), optional(kw("AS")), field("alias", $.alias)),
    identifier_list: $ => seq("(", commaSep1($._identifier), ")"),
    table_and_columns: $ =>
      seq(
        $._identifier,
        choice(alias($.identifier_list, $.column_names), $.column_definitions),
      ),
    column_definitions: $ => seq("(", commaSep1($.table_column), ")"),
    _aliasable_expression: $ =>
      prec.right(choice($._expression, $.aliased_expression)),
    distinct_clause: $ =>
      prec.right(
        seq(kw("DISTINCT"), optional(seq(kw("ON"), $.expression_list))),
      ),
    select_item: $ =>
      seq(
        $._aliasable_expression,
        optional(seq(kw("INTO"), field("into", $.identifier))),
      ),
    select_clause: $ =>
      prec.right(
        seq(
          kw("SELECT"),
          optional(choice(kw("ALL"), $.distinct_clause)),
          field("items", commaSep($.select_item)),
        ),
      ),
    from_clause: $ => seq(kw("FROM"), field("items", commaSep1($.from_item))),
    from_item: $ =>
      choice(
        seq(
          optional(kw("ONLY")),
          $._aliasable_expression,
          optional($.tablesample_clause),
        ),
        seq("(", $.join_clause, ")"),
        $.join_clause,
      ),
    tablesample_clause: $ =>
      seq(kw("TABLESAMPLE"), $.function_call, optional($.repeatable_clause)),
    repeatable_clause: $ =>
      seq(kw("REPEATABLE"), "(", field("seed", $._expression), ")"),
    rows_from_expression: $ =>
      prec.right(
        seq(
          optional(kw("LATERAL")),
          kw("ROWS FROM"),
          "(",
          commaSep1(seq($.function_call, optional(seq(kw("AS"), $.alias)))),
          ")",
          optional($.with_ordinality),
        ),
      ),

    join_clause: $ =>
      prec.right(seq(
        $.from_item,
        optional(kw("NATURAL")),
        optional($.join_type),
        kw("JOIN"),
        $.from_item,
        optional(choice($.join_condition, $.using_clause)),
      )),
    join_type: $ =>
      choice(
        kw("INNER"),
        kw("CROSS"),
        seq(
          choice(kw("LEFT"), kw("RIGHT"), kw("FULL")),
          optional(kw("OUTER")),
        ),
      ),
    join_condition: $ => seq(kw("ON"), $._expression),

    _combinable_query: $ =>
      prec.right(
        choice(
          $.select_statement,
          $.select_subexpression,
          $._aliased_subquery,
          $.values_clause,
          $.combining_query,
        ),
      ),
    combining_query: $ =>
      choice(
        ...[
          [choice(kw("UNION"), kw("EXCEPT")), PREC.additive],
          [kw("INTERSECT"), PREC.multiplicative],
        ].map(([combinator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._combinable_query),
              combinator,
              optional(kw("ALL")),
              field("right", $._combinable_query),
            ),
          ),
        ),
      ),
    select_subexpression: $ =>
      prec(
        1,
        seq(
          optional(kw("LATERAL")),
          "(",
          choice($.select_statement, $.combining_query, $.values_clause),
          ")",
        ),
      ),

    // UPDATE
    values_clause: $ =>
      seq(
        kw("VALUES"),
        field("items", commaSep1($.values_item)),
        optional($.order_by_clause),
        optional($.limit_clause),
        optional($.offset_clause),
        optional($.fetch_clause),
      ),
    values_item: $ => choice(
      seq("(", commaSep1(choice($._expression, kw("DEFAULT"))), ")"),
      $.row_constructor,
    ),
    in_expression: $ =>
      prec.left(
        PREC.comparative,
        seq(
          field("left", $._expression),
          optional(kw("NOT")),
          kw("IN"),
          field("right", choice($.select_subexpression, $.tuple)),
        ),
      ),
    tuple: $ =>
      seq(
        // TODO: maybe collapse with function arguments, but make sure to preserve clarity
        "(",
        field("elements", commaSep1($._expression)),
        ")",
      ),

    function_call: $ =>
      prec.right(
        1,
        seq(
          optional(kw("LATERAL")),
          field("function", $._identifier),
          "(",
          optional(field("arguments", $._function_call_arguments)),
          ")",
          optional($.with_ordinality),
          optional($.within_group_clause),
          optional($.filter_clause),
          optional($.over_clause),
        ),
      ),
    _function_call_arguments: $ =>
      seq(
        optional(choice(kw("ALL"), kw("DISTINCT"))),
        choice(
          commaSep1(choice($._expression, $.named_argument)),
          $.select_statement
        ),
        optional(seq(kw("FROM"), $._expression)),
        optional(seq(kw("FOR"), $.number)),
        optional(seq(kw("AS"), $._type)),
        optional($.order_by_clause),
      ),
    within_group_clause: $ =>
      seq(kw("WITHIN GROUP"), "(", $.order_by_clause, ")"),
    filter_clause: $ => seq(kw("FILTER"), "(", $.where_clause, ")"),
    over_clause: $ =>
      seq(kw("OVER"), choice($.identifier, $.window_definition)),
    window_definition: $ =>
      seq(
        "(",
        optional($.partition_by_clause),
        optional($.order_by_clause),
        optional($.frame_clause),
        ")",
      ),
    partition_by_clause: $ => seq(kw("PARTITION BY"), commaSep1($._expression)),
    frame_clause: $ =>
      choice(
        seq(
          $.frame_kind,
          field("frame_start", $.frame_bound),
          optional($.frame_exclusion),
        ),
        seq(
          $.frame_kind,
          kw("BETWEEN"),
          field("frame_start", $.frame_bound),
          kw("AND"),
          field("frame_end", $.frame_bound),
          optional($.frame_exclusion),
        ),
      ),
    frame_kind: $ => choice(kw("RANGE"), kw("ROWS"), kw("GROUPS")),
    frame_bound: $ =>
      choice(
        kw("UNBOUNDED PRECEDING"),
        seq($._expression, kw("PRECEDING")),
        kw("CURRENT ROW"),
        seq($._expression, kw("FOLLOWING")),
        kw("UNBOUNDED FOLLOWING"),
      ),
    frame_exclusion: $ =>
      choice(
        kw("EXCLUDE CURRENT ROW"),
        kw("EXCLUDE GROUP"),
        kw("EXCLUDE TIES"),
        kw("EXCLUDE NO OTHERS"),
      ),

    _parenthesized_expression: $ =>
      prec.left(PREC.unary, seq("(", $._expression, ")")),
    isnull_expression: $ => seq(field("expression", $._expression), kw("ISNULL")),
    notnull_expression: $ => seq(field("expression", $._expression), kw("NOTNULL")),
    between_and_expression: $ =>
      prec.left(
        PREC.comparative,
        seq(
          field("expression", $._expression),
          optional(kw("NOT")),
          kw("BETWEEN"),
          optional(kw("SYMMETRIC")),
          field("lower_bound", $._expression),
          kw("AND"),
          field("upper_bound", $._expression),
        ),
      ),

    number: $ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent),
            seq(digits),
          ),
        ),
      );
    },

    _unquoted_identifier: $ => /[a-zA-Z0-9_]+/,
    
    _quoted_identifier: $ =>
      token(choice(
        seq("`", field("name", /[^`]*/), "`"), // MySQL style quoting
        seq('"', repeat(choice(
          token.immediate(prec(1, /[^\\"\n]+/)),  // 普通字符
          seq('\\', '"'),                          // 转义的双引号
          '""'
        )), '"'), // ANSI QUOTES
    )),
    identifier: $ => choice($._unquoted_identifier, $._quoted_identifier),
    dotted_name: $ => prec.left(PREC.primary, sep2($.identifier, ".")),
    _identifier: $ => prec(PREC.primary, choice($.identifier, $.dotted_name)),
    string: $ => choice($._single_quoted_string, $._dollar_quoted_string),
    _single_quoted_string: $ => token(seq(
      choice("'", "e'", "E'"),
      field("content", alias(/(''|[^'])*/, $.content)),
      "'"
    )),
    _dollar_quoted_string: $ => seq(
      $._dollar_quoted_string_tag,
      field("content", alias($._dollar_quoted_string_content, $.content)),
      $._dollar_quoted_string_end_tag,
    ),
    type: $ =>
      prec.right(
        seq(
          $._identifier,
          optional(kw("VARYING", 1)), // CHARACTER/BIT VARYING
          optional(kw("PRECISION", 1)), // DOUBLE PRECISION
          optional(seq("(", commaSep1($.number), ")")),
          optional(seq(choice(kw("WITH"), kw("WITHOUT")), kw("TIME ZONE"))), // TIME/TIMESTAMP (n) WITH/WITHOUT TIME ZONE
        ),
      ),
    array_type: $ =>
      prec.right(seq($._type, repeat1(seq("[", optional($.number), "]")))),
    _type: $ => choice($.type, $.array_type, $.table_type),
    type_cast: $ =>
      seq(
        // TODO: should be moved to basic expression or something
        field("expression", choice(
          $._parenthesized_expression,
          $.string,
          $._identifier,
          $.function_call,
          $.field_selection,
          $.array_constructor,
          $.type_cast,
          $.number,
          $.conditional_expression,
          $.NULL,
          $.TRUE,
          $.FALSE,
          $.UNKNOWN,
        )),
        "::",
        field("type", $._type),
      ),

    array_constructor: $ =>
      seq(
        kw("ARRAY", 1),
        choice(
          seq("[", commaSep($._array_element), "]"),
          seq("(", $.select_statement, ")"),
        ),
      ),
    _array_element: $ => choice(
      $._expression,
      alias($._compact_array_constructor, $.array_constructor)
    ),
    array_element_access: $ =>
    seq(
      field("subject", choice($._identifier, $.argument_reference, $.array_element_access, $.function_call, $._parenthesized_expression)),
      choice(
        seq("[", field("subscript", $._expression), "]"),
        seq("[", field("subscript", seq(optional($._expression), ":", optional($._expression))), "]"),
      )
    ),

    row_constructor: $ => seq(kw("ROW", 1), "(", commaSep($._expression), ")"),
    composite_expression: $ =>
      seq("(", $._expression, ",", commaSep1($._expression), ")"),

    asterisk_expression: $ => choice("*", seq($._identifier, ".*")),
    interval_expression: $ => seq(kw("INTERVAL", 1), field("value", $.string)),
    _expression: $ => choice($._simple_expression, $.composite_expression),


    //////////////////////////////////// PL/SQL ////////////////////////////////////
