test/corpus/select.txt
================================================================================
SELECT statement with joins
================================================================================

SELECT a, t.a, t.b, (INTERVAL '5 minutes') as b
FROM table1 AS t
JOIN t1 ON (t.a = t1.a)
INNER JOIN t2 ON (t.a = t2.a)
FULL OUTER JOIN t2 ON t.a = t2.a
FULL JOIN t3 ON t.a = t3.a
RIGHT JOIN t4 ON t.a = t4.a
RIGHT OUTER JOIN t5 ON t.a = t5.a
LEFT JOIN t6 ON t.a = t6.a
LEFT OUTER JOIN t7 ON t.a = t7.a;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier))
      (select_item
        (dotted_name
          (identifier)
          (identifier)))
      (select_item
        (dotted_name
          (identifier)
          (identifier)))
      (select_item
        (aliased_expression
          (interval_expression
            (string))
          (alias
            (identifier)))))
    (from_clause
      (from_item
        (join_clause
          (from_item
            (join_clause
              (from_item
                (join_clause
                  (from_item
                    (join_clause
                      (from_item
                        (join_clause
                          (from_item
                            (join_clause
                              (from_item
                                (join_clause
                                  (from_item
                                    (join_clause
                                      (from_item
                                        (aliased_expression
                                          (identifier)
                                          (alias
                                            (identifier))))
                                      (from_item
                                        (identifier))
                                      (join_condition
                                        (binary_expression
                                          (dotted_name
                                            (identifier)
                                            (identifier))
                                          (dotted_name
                                            (identifier)
                                            (identifier))))))
                                  (join_type)
                                  (from_item
                                    (identifier))
                                  (join_condition
                                    (binary_expression
                                      (dotted_name
                                        (identifier)
                                        (identifier))
                                      (dotted_name
                                        (identifier)
                                        (identifier))))))
                              (join_type)
                              (from_item
                                (identifier))
                              (join_condition
                                (binary_expression
                                  (dotted_name
                                    (identifier)
                                    (identifier))
                                  (dotted_name
                                    (identifier)
                                    (identifier))))))
                          (join_type)
                          (from_item
                            (identifier))
                          (join_condition
                            (binary_expression
                              (dotted_name
                                (identifier)
                                (identifier))
                              (dotted_name
                                (identifier)
                                (identifier))))))
                      (join_type)
                      (from_item
                        (identifier))
                      (join_condition
                        (binary_expression
                          (dotted_name
                            (identifier)
                            (identifier))
                          (dotted_name
                            (identifier)
                            (identifier))))))
                  (join_type)
                  (from_item
                    (identifier))
                  (join_condition
                    (binary_expression
                      (dotted_name
                        (identifier)
                        (identifier))
                      (dotted_name
                        (identifier)
                        (identifier))))))
              (join_type)
              (from_item
                (identifier))
              (join_condition
                (binary_expression
                  (dotted_name
                    (identifier)
                    (identifier))
                  (dotted_name
                    (identifier)
                    (identifier))))))
          (join_type)
          (from_item
            (identifier))
          (join_condition
            (binary_expression
              (dotted_name
                (identifier)
                (identifier))
              (dotted_name
                (identifier)
                (identifier)))))))))

================================================================================
SELECT statement with parenthesized joins
================================================================================

SELECT t.a a, t1.b b, t2.c AS c
FROM t INNER JOIN (
  tb1 AS t1
  FULL OUTER JOIN t2 ON t1.a = t2.a
) ON t.a = t1.a;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier))))
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier))))
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier)))))
    (from_clause
      (from_item
        (join_clause
          (from_item
            (identifier))
          (join_type)
          (from_item
            (join_clause
              (from_item
                (aliased_expression
                  (identifier)
                  (alias
                    (identifier))))
              (join_type)
              (from_item
                (identifier))
              (join_condition
                (binary_expression
                  (dotted_name
                    (identifier)
                    (identifier))
                  (dotted_name
                    (identifier)
                    (identifier))))))
          (join_condition
            (binary_expression
              (dotted_name
                (identifier)
                (identifier))
              (dotted_name
                (identifier)
                (identifier)))))))))

================================================================================
SELECT statement with joins using clause
================================================================================

SELECT t.a a, t1.b b FROM t INNER JOIN tb1 AS t1 USING (a, b);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier))))
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier)))))
    (from_clause
      (from_item
        (join_clause
          (from_item
            (identifier))
          (join_type)
          (from_item
            (aliased_expression
              (identifier)
              (alias
                (identifier))))
          (using_clause
            (identifier_list
              (identifier)
              (identifier))))))))

================================================================================
SELECT statement with rows from expression
================================================================================

SELECT t.a a, t.b b, t.c c FROM ROWS FROM (
  func1(1, 2) AS (a INTEGER, b NUMERIC),
  func2('x') AS (c VARCHAR)
) AS t(a, b, c);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier))))
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier))))
      (select_item
        (aliased_expression
          (dotted_name
            (identifier)
            (identifier))
          (alias
            (identifier)))))
    (from_clause
      (from_item
        (aliased_expression
          (rows_from_expression
            (function_call
              (identifier)
              (number)
              (number))
            (alias
              (column_definitions
                (table_column
                  (identifier)
                  (type
                    (identifier)))
                (table_column
                  (identifier)
                  (type
                    (identifier)))))
            (function_call
              (identifier)
              (string))
            (alias
              (column_definitions
                (table_column
                  (identifier)
                  (type
                    (identifier))))))
          (alias
            (table_and_columns
              (identifier)
              (column_names
                (identifier)
                (identifier)
                (identifier)))))))))

================================================================================
SELECT statement with tablesample clause
================================================================================

SELECT * FROM tb1 TABLESAMPLE sampling_method(1, 2) REPEATABLE (7);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (asterisk_expression)))
    (from_clause
      (from_item
        (identifier)
        (tablesample_clause
          (function_call
            (identifier)
            (number)
            (number))
          (repeatable_clause
            (number)))))))

================================================================================
SELECT element from array
================================================================================

SELECT a[0];

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (array_element_access
          (identifier)
          (number))))))

================================================================================
SELECT with aliases
================================================================================

SELECT a as b, c d, e
FROM table1 AS t, table2 t2, table3

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (select_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (from_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (from_item
        (identifier)))))

================================================================================
SELECT with distinct clause
================================================================================

SELECT ALL a as x, b FROM table1 AS t;
SELECT DISTINCT a as x, b FROM table1 AS t;
SELECT DISTINCT ON (a + 1, mod(b, 3), c) a as x, b FROM table1 AS t;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))))
  (select_statement
    (select_clause
      (distinct_clause)
      (select_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))))
  (select_statement
    (select_clause
      (distinct_clause
        (expression_list
          (binary_expression
            (identifier)
            (number))
          (function_call
            (identifier)
            (identifier)
            (number))
          (identifier)))
      (select_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (aliased_expression
          (identifier)
          (alias
            (identifier)))))))

================================================================================
SELECT with in expression
================================================================================

SELECT a as x, b FROM table1 WHERE a IN (1, mod(2, 3), 4 * 5);
SELECT a as x, b FROM table1 WHERE a IN (SELECT x FROM table2);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (in_expression
        (identifier)
        (tuple
          (number)
          (function_call
            (identifier)
            (number)
            (number))
          (binary_expression
            (number)
            (number))))))
  (select_statement
    (select_clause
      (select_item
        (aliased_expression
          (identifier)
          (alias
            (identifier))))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (in_expression
        (identifier)
        (select_subexpression
          (select_statement
            (select_clause
              (select_item
                (identifier)))
            (from_clause
              (from_item
                (identifier)))))))))

================================================================================
SELECT with comparison predicate ISNULL
================================================================================

SELECT a FROM t WHERE a ISNULL;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (isnull_expression
        (identifier)))))

================================================================================
SELECT with comparison predicate NOTNULL
================================================================================

SELECT a FROM t WHERE a NOTNULL;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (notnull_expression
        (identifier)))))

================================================================================
SELECT with comparison predicate between and
================================================================================

SELECT a FROM t WHERE a BETWEEN 1 AND 5;
SELECT a FROM t WHERE a NOT BETWEEN 1 AND 5;
SELECT a FROM t WHERE a BETWEEN SYMMETRIC 1 AND 5;
SELECT a FROM t WHERE a NOT BETWEEN SYMMETRIC 1 AND 5;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (between_and_expression
        (identifier)
        (number)
        (number))))
  (select_statement
    (select_clause
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (between_and_expression
        (identifier)
        (number)
        (number))))
  (select_statement
    (select_clause
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (between_and_expression
        (identifier)
        (number)
        (number))))
  (select_statement
    (select_clause
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (between_and_expression
        (identifier)
        (number)
        (number)))))

================================================================================
SELECT with limit
================================================================================

SELECT * FROM foo LIMIT 10;
SELECT * FROM foo LIMIT 10, 5;
SELECT * FROM foo LIMIT 10 OFFSET 5;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (asterisk_expression)))
    (from_clause
      (from_item
        (identifier)))
    (limit_clause
      (number)))
  (select_statement
    (select_clause
      (select_item
        (asterisk_expression)))
    (from_clause
      (from_item
        (identifier)))
    (limit_clause
      (number)
      (number)))
  (select_statement
    (select_clause
      (select_item
        (asterisk_expression)))
    (from_clause
      (from_item
        (identifier)))
    (limit_clause
      (number))
    (offset_clause
      (number))))

================================================================================
SELECT with CTE
================================================================================

WITH t AS (
    SELECT * FROM foo
)
SELECT * FROM bar;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (with_clause
      (cte
        (identifier)
        (select_statement
          (select_clause
            (select_item
              (asterisk_expression)))
          (from_clause
            (from_item
              (identifier))))))
    (select_clause
      (select_item
        (asterisk_expression)))
    (from_clause
      (from_item
        (identifier)))))

================================================================================
SELECT with aliased join
================================================================================

SELECT foo.x, bar.y FROM foo LEFT JOIN (SELECT id, y FROM baz) baz ON baz.id = foo.id;
SELECT foo.x, bar.y FROM foo LEFT JOIN (SELECT id, y FROM baz) AS baz ON baz.id = foo.id;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (dotted_name
          (identifier)
          (identifier)))
      (select_item
        (dotted_name
          (identifier)
          (identifier))))
    (from_clause
      (from_item
        (join_clause
          (from_item
            (identifier))
          (join_type)
          (from_item
            (aliased_expression
              (select_subexpression
                (select_statement
                  (select_clause
                    (select_item
                      (identifier))
                    (select_item
                      (identifier)))
                  (from_clause
                    (from_item
                      (identifier)))))
              (alias
                (identifier))))
          (join_condition
            (binary_expression
              (dotted_name
                (identifier)
                (identifier))
              (dotted_name
                (identifier)
                (identifier))))))))
  (select_statement
    (select_clause
      (select_item
        (dotted_name
          (identifier)
          (identifier)))
      (select_item
        (dotted_name
          (identifier)
          (identifier))))
    (from_clause
      (from_item
        (join_clause
          (from_item
            (identifier))
          (join_type)
          (from_item
            (aliased_expression
              (select_subexpression
                (select_statement
                  (select_clause
                    (select_item
                      (identifier))
                    (select_item
                      (identifier)))
                  (from_clause
                    (from_item
                      (identifier)))))
              (alias
                (identifier))))
          (join_condition
            (binary_expression
              (dotted_name
                (identifier)
                (identifier))
              (dotted_name
                (identifier)
                (identifier)))))))))

================================================================================
SELECT with LATERAL subexpression
================================================================================

SELECT * FROM LATERAL (SELECT * FROM foo) bar;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (asterisk_expression)))
    (from_clause
      (from_item
        (aliased_expression
          (select_subexpression
            (select_statement
              (select_clause
                (select_item
                  (asterisk_expression)))
              (from_clause
                (from_item
                  (identifier)))))
          (alias
            (identifier)))))))

================================================================================
SELECT GROUP BY
================================================================================

SELECT a, b FROM foo GROUP BY a + 1, b;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (group_by_clause
      (grouping_expression
        (binary_expression
          (identifier)
          (number)))
      (grouping_expression
        (identifier)))))

================================================================================
SELECT GROUP BY GROUPING SETS
================================================================================

SELECT a, b FROM foo GROUP BY GROUPING SETS ((), (a), (b), (a, b), (a + 1, b + 1));

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (group_by_clause
      (grouping_expression
        (grouping_sets_clause
          (grouping_set)
          (grouping_set
            (identifier))
          (grouping_set
            (identifier))
          (grouping_set
            (identifier)
            (identifier))
          (grouping_set
            (binary_expression
              (identifier)
              (number))
            (binary_expression
              (identifier)
              (number))))))))

================================================================================
SELECT GROUP BY ROLLUP
================================================================================

SELECT a, b FROM foo GROUP BY ROLLUP (a, (a, b), a + 1, b + 1);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (group_by_clause
      (grouping_expression
        (rollup_clause
          (identifier)
          (grouping_set
            (identifier)
            (identifier))
          (binary_expression
            (identifier)
            (number))
          (binary_expression
            (identifier)
            (number)))))))

================================================================================
SELECT GROUP BY CUBE
================================================================================

SELECT a, b FROM foo GROUP BY CUBE (a, (a, b), a + 1, b + 1);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (group_by_clause
      (grouping_expression
        (cube_clause
          (identifier)
          (grouping_set
            (identifier)
            (identifier))
          (binary_expression
            (identifier)
            (number))
          (binary_expression
            (identifier)
            (number)))))))

================================================================================
SELECT GROUP BY HAVING
================================================================================

SELECT a, b FROM foo GROUP BY a, b HAVING a > b;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (group_by_clause
      (grouping_expression
        (identifier))
      (grouping_expression
        (identifier))
      (having_clause
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
SELECT GROUP BY complex
================================================================================

SELECT a, b FROM foo GROUP BY
  a + 1,
  GROUPING SETS ((), (a, b)),
  ROLLUP (a + 1, (a, b)),
  CUBE (a + 1, (a, b))
  HAVING a > b;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_item
        (identifier))
      (select_item
        (identifier)))
    (from_clause
      (from_item
        (identifier)))
    (group_by_clause
      (grouping_expression
        (binary_expression
          (identifier)
          (number)))
      (grouping_expression
        (grouping_sets_clause
          (grouping_set)
          (grouping_set
            (identifier)
            (identifier))))
      (grouping_expression
        (rollup_clause
          (binary_expression
            (identifier)
            (number))
          (grouping_set
            (identifier)
            (identifier))))
      (grouping_expression
        (cube_clause
          (binary_expression
            (identifier)
            (number))
          (grouping_set
            (identifier)
            (identifier))))
      (having_clause
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
SELECT aggregate expressions
================================================================================

SELECT array_agg(a ORDER BY b DESC) FROM foo;
SELECT array_agg(ALL a ORDER BY b DESC) FROM foo;
SELECT array_agg(DISTINCT a ORDER BY b DESC) FROM foo;

--------------------------------------------------------------------------------
